Fix spacing on validation alerts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -168,3 +168,7 @@ a.dark {
   background: white;
   padding: 1px 15px 15px 15px;
 }
+
+.alert {
+  margin-top: 10px;
+}
